--- a/templates/client/_form.html.twig
+++ b/templates/client/_form.html.twig
@@ -1,4 +1,28 @@
+{#
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_widget(form) }}
+<button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_end(form) }}
+
+#}
+
+{{ form_start(form) }}
+
+{{ form_errors(form) }}
+
+<div>
+    {{ form_label(form.name) }}
+    {{ form_widget(form.name) }}
+    {{ form_errors(form.name) }}
+</div>
+
+<div>
+    {{ form_label(form.email) }}
+    {{ form_widget(form.email) }}
+    {{ form_errors(form.email) }}
+</div>
+
+<button class="btn">{{ button_label|default('Save') }}</button>
+{#<button>Enregistrer</button>#}
+
 {{ form_end(form) }}
