--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -3,5 +3,6 @@
 
     <nav class="navbar-menu">
         <a href="{{ path('app_accueil') }}" class="navbar-link">Accueil</a>
+        <a href="{{ path('app_client_index') }}" class="navbar-link">Clients</a>
     </nav>
 </header>
