--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -4,5 +4,8 @@
     <nav class="navbar-menu">
         <a href="{{ path('app_accueil') }}" class="navbar-link">Accueil</a>
         <a href="{{ path('app_client_index') }}" class="navbar-link">Clients</a>
+        <a href="{{ path('app_audit_index') }}" class="navbar-link">Audits</a>
+        <a href="{{ path('app_document_audit_index') }}" class="navbar-link">Documents</a>
+        
     </nav>
 </header>
